[gd_scene load_steps=20 format=3 uid="uid://cg4p25ompe5my"]

[ext_resource type="Theme" uid="uid://c3hg6ndkr8syx" path="res://themes/trivitime.tres" id="1_b85je"]
[ext_resource type="Script" path="res://scripts/trivitime/tt_players.gd" id="2_80dee"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="3_eldiy"]
[ext_resource type="Texture2D" uid="uid://dddqijbdr4y81" path="res://assets/sprites/tt_bg.png" id="4_7y7p4"]
[ext_resource type="Script" path="res://scripts/HoverComponent.gd" id="6_1tdrb"]
[ext_resource type="Texture2D" uid="uid://brwdo7yy83key" path="res://assets/sprites/ui/trivitime/panel.png" id="6_5vefg"]
[ext_resource type="Texture2D" uid="uid://cqh44poo33kkm" path="res://assets/sprites/trivitime/trivitime title.png" id="6_8xglh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5dbl6"]
shader = ExtResource("3_eldiy")
shader_parameter/x_speed = 0.2
shader_parameter/y_speed = 0.05

[sub_resource type="Gradient" id="Gradient_ttdrn"]
offsets = PackedFloat32Array(0, 0.957576, 1)
colors = PackedColorArray(0, 0, 0, 0.423529, 0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wdcqf"]
gradient = SubResource("Gradient_ttdrn")
width = 1
fill_from = Vector2(1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k0iav"]
gradient = SubResource("Gradient_ttdrn")
width = 1
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sp3e7"]
texture = ExtResource("6_5vefg")
texture_margin_left = 70.0
texture_margin_right = 70.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 753, 138)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ledv2"]
texture = ExtResource("6_5vefg")
texture_margin_left = 70.0
texture_margin_right = 70.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 753, 138)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s5s0p"]
texture = ExtResource("6_5vefg")
texture_margin_left = 70.0
texture_margin_right = 70.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 753, 138)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vetv1"]
texture = ExtResource("6_5vefg")
texture_margin_left = 70.0
texture_margin_right = 70.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 753, 138)

[sub_resource type="InputEventKey" id="InputEventKey_rjku3"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_p76qg"]
events = [SubResource("InputEventKey_rjku3")]

[sub_resource type="InputEventKey" id="InputEventKey_vn6ow"]
device = -1
keycode = 4194308

[sub_resource type="Shortcut" id="Shortcut_o4e52"]
events = [SubResource("InputEventKey_vn6ow")]

[node name="Players" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_b85je")
script = ExtResource("2_80dee")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.423529, 0.811765, 0.439216, 1)
material = SubResource("ShaderMaterial_5dbl6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7y7p4")
stretch_mode = 1

[node name="gradient2" type="TextureRect" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.77
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.399963
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
texture = SubResource("GradientTexture2D_wdcqf")

[node name="gradient3" type="TextureRect" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.23
offset_bottom = -0.400009
grow_horizontal = 2
mouse_force_pass_scroll_events = false
texture = SubResource("GradientTexture2D_k0iav")

[node name="TITLE" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
offset_left = 21.0
offset_top = 11.0
offset_right = 1237.0
offset_bottom = 270.0
texture = ExtResource("6_8xglh")
expand_mode = 1
stretch_mode = 5

[node name="join_the_game" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -605.0
offset_top = -298.0
offset_right = -58.0
offset_bottom = -220.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.25098)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 64
text = "JOIN THE GAME!"
horizontal_alignment = 2
vertical_alignment = 2

[node name="code" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -891.0
offset_top = -250.0
offset_right = -57.0
offset_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.25098)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 164
text = "LOCKED"
horizontal_alignment = 2
vertical_alignment = 2

[node name="reveal" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -509.0
offset_top = -74.0
offset_right = -62.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(447, 0)
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.25098)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 48
text = "[E] - LOCK GAME"
horizontal_alignment = 2
vertical_alignment = 2

[node name="player_panel" type="Button" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
offset_left = 1430.0
offset_top = 36.0
offset_right = 2059.0
offset_bottom = 116.0
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_sp3e7")
theme_override_styles/hover = SubResource("StyleBoxTexture_ledv2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s5s0p")
theme_override_styles/normal = SubResource("StyleBoxTexture_vetv1")

[node name="username" type="Label" parent="player_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = 12.0
offset_right = -132.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.478431)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "decent_games"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="players" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1430.0
offset_top = 36.0
offset_right = 2059.0
offset_bottom = 757.0
theme_override_constants/separation = 8

[node name="buttons" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -423.0
offset_right = 818.0
offset_bottom = -54.0
grow_vertical = 0

[node name="join" type="Button" parent="buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -369.0
offset_right = 319.0
offset_bottom = -286.0
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "JOIN"
alignment = 2

[node name="HoverComponent" type="Node" parent="buttons/join"]
script = ExtResource("6_1tdrb")
Translate = Vector2(10, 0)
style_easing = 1
style_transition = 5

[node name="Play" type="Button" parent="buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -278.0
offset_right = 821.0
offset_bottom = -148.0
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 96
shortcut = SubResource("Shortcut_p76qg")
text = "LET'S START!"
alignment = 2

[node name="HoverComponent" type="Node" parent="buttons/Play"]
script = ExtResource("6_1tdrb")
Translate = Vector2(10, 0)
style_easing = 1
style_transition = 5

[node name="Exit" type="Button" parent="buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -140.0
offset_right = 527.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_font_sizes/font_size = 96
shortcut = SubResource("Shortcut_o4e52")
text = "BACK"
alignment = 2

[node name="HoverComponent" type="Node" parent="buttons/Exit"]
script = ExtResource("6_1tdrb")
Translate = Vector2(10, 0)
style_easing = 1
style_transition = 5

[node name="timer" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 310.0
offset_top = -304.0
offset_right = 610.0
offset_bottom = 315.0
grow_vertical = 2
pivot_offset = Vector2(150, 286)
theme_override_font_sizes/font_size = 512
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[node name="debug" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 537.0
offset_right = 619.0
offset_bottom = 618.0

[node name="tip" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 278.0
offset_right = 1132.0
offset_bottom = 448.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.411765)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "TIP"
autowrap_mode = 2

[connection signal="mouse_entered" from="BG" to="." method="_on_bg_mouse_entered"]
[connection signal="mouse_exited" from="BG" to="." method="_on_bg_mouse_exited"]
[connection signal="pressed" from="buttons/join" to="." method="join"]
[connection signal="pressed" from="buttons/Play" to="." method="play"]
[connection signal="pressed" from="buttons/Exit" to="." method="back"]
[connection signal="text_submitted" from="debug" to="." method="_on_debug_text_submitted"]
